# V-LEAD

./: .env  .gitignore  CLAUDE.md  FiGS_instructions.md  LEAD_instructions.md  README.md  docker-compose.yml  vlead_flightroom_data_readme.md
nav_policy/: DATA_SETUP.md  README.md  modal_train.py  pyproject.toml
nav_policy/configs/: ABLATIONS.md  ablation_no_goal.yaml  dagger_round1.yaml  dagger_round1_mpc.yaml  dagger_round2.yaml  dagger_round2_mpc.yaml  default.yaml  eval_closed_loop.yaml  eval_closed_loop_flightroom.yaml  eval_closed_loop_flightroom_fm.yaml  eval_closed_loop_no_goal.yaml  eval_closed_loop_test.yaml  eval_offline_flightroom.yaml  eval_offline_flightroom_fm.yaml  flightroom.yaml  flightroom_fm.yaml  flightroom_fm_modal.yaml  flightroom_fm_modal_fulltrajs.yaml  flightroom_fm_modal_shuffled.yaml  flightroom_fm_sherlock.yaml  flightroom_modal.yaml  sac_default.yaml  sac_fm.yaml  smoke_fm.yaml  train_rl_100_expert_x0.yaml  train_rl_flightroom_sac.yaml
nav_policy/scripts/: build_dataset_flightroom.py  gradcam_saliency.py  make_report_figures.py  nav_policy_entrypoint.sh  plot_eval_offline.py  sherlock_build_dataset.sbatch  sherlock_train_fm.sbatch  smoke_env.py  train_fm.py  train_sac.py
nav_policy/src/nav_policy/dagger/: mpc_oracle.py  run_dagger.py
nav_policy/src/nav_policy/data/: __init__.py  build_dataset.py  normalization.py  rgb_horizon_dataset.py
nav_policy/src/nav_policy/deploy/: frame_buffer.py  policy_controller.py
nav_policy/src/nav_policy/rl/: ppo.py  (+6 more)
vlead/: README.md  pyproject.toml
vlead/tests/: test_pilot_smoke.py
vlead/vlead/: __init__.py  deploy.py  eval.py  network_protocol.py
vlead/vlead_flight/: __init__.py  _torch_compat.py  deploy.py  observation.py  pilot.py  recorder.py
vlead/vlead_flight/env/: __init__.py  episode_sampler.py  figs_drone_env.py  reward.py  termination.py
(+16 files in other folders)
