[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nav_policy"
version = "0.1.0"
description = "RGB-only vision-to-velocity navigation policy for the FiGS quadrotor simulator."
requires-python = ">=3.10,<3.11"
authors = [{ name = "Rayan" }]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "torchvision",
    "pyyaml",
    "tqdm",
    "imageio[ffmpeg]",
    "av",
]

[project.optional-dependencies]
wandb = ["wandb"]
rl = ["gymnasium~=0.29.0", "stable-baselines3==2.2.1", "tensorboard"]

[tool.setuptools.packages.find]
where = ["src"]
