[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vlead_flight"
version = "0.1.0"
description = "V-LEAD goal-conditioned visuomotor navigation for quadrotors (CS231N)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.1",
    "scipy",
    "typer",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["vlead_flight*"]
