[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vlead_flight"
version = "0.1.0"
description = "V-LEAD goal-conditioned visuomotor navigation for quadrotors (CS231N)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.1",
    "scipy",
    "typer",
    "matplotlib",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
# sb3 pinned to 2.2.1 (last version supporting torch 2.1) so the container's
# bundled torch+gsplat (2.1.2+cu118 / 1.5.3+pt21cu118) stays intact.
rl = ["stable-baselines3==2.2.1", "tensorboard"]

[tool.setuptools.packages.find]
include = ["vlead_flight*"]
